--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,12 @@
 </head>
 <body>
 	<form action="bonjour" method="post">
-		<input type="text" name="nom">
-		<input type="submit">
+		<input type="text" name="nom" placeholder="nom">
+		<input type="text" name="prenom" placeholder="prenom">
+		<input type="text" name="age" placeholder="age">
+		<button name="choix" value="envoi">Envoi </button>
+		<button name="choix" value="afficher">Afficher </button>
+		
 	</form>
 </body>
 </html>
